--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,10 +1,13 @@
 .navbar {
   display: flex;
   flex-direction: row;
+  width: 98%;
+  margin: auto;
+  padding: 10px;
 }
 
 div {
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .left-icon {
@@ -20,10 +23,11 @@ div {
   width: 1100px;
   gap: 20px;
   font-weight: 500;
+  padding-left: 40px;
 }
 
 .titles > p {
-  border: 1px solid saddlebrown;
+  /* border: 1px solid saddlebrown; */
   /* flex-basis: 90px; */
 }
 
@@ -33,4 +37,10 @@ div {
   align-items: center;
   justify-content: center;
   gap: 10px;
+}
+
+.right-btns > button {
+  border-radius: 50px;
+  width: 170px;
+  height: 30px;
 }
